--- a/src/components/HomeBGimage.css
+++ b/src/components/HomeBGimage.css
@@ -4,7 +4,7 @@
     letter-spacing: 0.3rem;
     color: transparent;
     -webkit-text-stroke: 1px #fff;
-    background: url(/public/back.png);
+    background: url(../assets/back.png);
     -webkit-background-clip: text;
     background-position: 0 0;
     animation: back 20s linear infinite;
