--- a/src/components/HomeBGimage.css
+++ b/src/components/HomeBGimage.css
@@ -1,5 +1,6 @@
+
 .mekan{
-    font-size: 6rem;
+    font-size: 9vw;
     font-weight: 700;
     letter-spacing: 0.3rem;
     color: transparent;
@@ -16,44 +17,14 @@
 }
 
 .text-m{
+    width: 40vw;
     color: #fff;
-    margin-left: 3rem;
-    position: absolute;
-    top: 40vh;
+    margin-left: 3vw;
+    transform: translateY(-200%);
 }
 
-@media (min-width: 768px) and (max-width: 1020px) { 
+@media screen and (max-width:375px){
     .text-m{
-        position: absolute;
-        top: 47vh;
-        margin-left: 4rem;
-
+        transform: translateY(-180%);
     }
-    .mekan{
-        font-size: 5rem;
-        font-weight: 700;
-        letter-spacing: 0.3rem;
-    }
- }
-
- @media (min-width: 1024px) and (max-width: 1440px){
-    .text-m{
-        position: absolute;
-        top: 50vh;
-        margin-left: 4rem;
-    }
-    .mekan{
-        font-size: 7rem;
-        font-weight: 800;
-        letter-spacing: 0.3rem;
-    }
- }
-
- @media (max-width: 767px) {
-    .text-m{
-        display: none;
-    }
-    .mekan{
-        display: none;
-    }
- }
+}
